--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             href="https://upload.wikimedia.org/wikipedia/commons/e/e6/VLC_Icon.svg"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Vlc Replica</title>
     </head>
     <body>
         <div id="root"></div>
